# crete-dev

./: .gitignore  CMakeLists.txt  README.md
back-end/: CMakeLists.txt
back-end/llvm-translator/: CMakeLists.txt
back-end/llvm-translator/llvm-translator-qemu-2.3/: make_op_helper_bc.sh
back-end/manager/dispatch/: CMakeLists.txt  dispatch_ui.cpp
front-end/: CMakeLists.txt
front-end/guest/: CMakeLists.txt
front-end/guest/lib/boost/: CMakeLists.txt  boost.src.tar.bz2
front-end/guest/lib/include/crete/: custom_instr.h
front-end/guest/lib/run-preload/: run_preload.cpp
front-end/guest/lib/vm-comm/: custom_instr.c
front-end/guest/util/run/: runner.cpp
front-end/qemu-2.3/: Makefile.target
lib/: CMakeLists.txt
lib/asio/client/: client.cpp  client_pimpl.cpp  client_pimpl.h
lib/asio/server/: CMakeLists.txt  server.cpp
lib/boost/: CMakeLists.txt  README.md
lib/cluster/: CMakeLists.txt  dispatch.cpp  svm_node.cpp  svm_node_fsm.cpp  test_pool.cpp  vm_node.cpp  vm_node_fsm.cpp
lib/include/boost/process/: child.hpp  context.hpp  process.hpp
lib/include/boost/process/detail/: file_handle.hpp  pipe.hpp  posix_ops.hpp
lib/include/crete/: assert.hpp  custom_opcode.h  exception.h  guest_data_post_exec.hpp  guest_harness.h  harness_config.h  ovmf.h  terminal.hpp  test_case.h  timer.hpp
lib/include/crete/asio/: client.h  common.h  server.h
lib/include/crete/cluster/: common.h  dispatch.h  dispatch_options.h  node_driver.h  vm_node.h  vm_node_fsm.h
lib/include/crete/host/: crete.h
lib/test-case/: test_case.cpp
misc/util/: CMakeLists.txt
(+19 files in other folders)
